Fix modal overflow
Broken from d7d0e6029af87a1397925a4a9f3f8530791a5929

--- a/core/src/main/web/app/styles/modal.scss
+++ b/core/src/main/web/app/styles/modal.scss
@@ -22,6 +22,7 @@ html {
   }
 
   .modal-body {
+    overflow-y: auto;
     padding-top: 0;
     padding-bottom: 0;
   }
@@ -38,6 +39,7 @@ html {
   }
 
   .modal-footer.fixed {
+    background-color: white;
     height: $fixed-footer-height;
     padding-top: 14px;
     padding-bottom: 15px;
